Cambia video da youtube a peertube nella home

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -59,7 +59,7 @@
 
           <div class="video image-reveal">
             <a class="video-play"
-              data-video="https://www.youtube.com/embed/{{.video_id}}?autoplay=1&showinfo=0&controls=0">
+              data-video="https://peertube.uno/videos/embed/{{.video_id}}?autoplay=1&title=0&warningTitle=0&controls=0&peertubeLink=0">
               <img src="{{ .video_thumb | absURL }}" class="img-fluid" alt="video-thumb">
               <i class="fa fa-play"></i>
             </a>
