--- a/layouts/index.html
+++ b/layouts/index.html
@@ -29,7 +29,7 @@
       </div>
       <div class="col-12 text-center">
         <div class="scroll">
-          <h6>SCROLL</h6>
+          <h6>SCORRI</h6>
         </div>
       </div>
     </div>
