prova a cambiare l'etichetta

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,7 +20,7 @@
               <h3>{{ .content | markdownify }}</h3>
               {{ if .button.enable }}
               {{ with .button }}
-              <a href="{{ .link | absURL }}" class="hero-btn btn page-scroll">{{.label}}</a>
+              <a href="{{ .target | absURL }}" class="hero-btn btn page-scroll">{{.label}}</a>
               {{ end }}
               {{ end }}
             </div>
