Cambia immagini di sfondo e integrale nel tema

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,7 +42,7 @@
 {{ with site.Data.homepage.mission }}
 <section class="mission" id="mission">
   <div class="bg">
-    <img src="{{`images/section-bg.jpg` | absURL}}" class="img-fluid" alt="section-bg">
+    <img src="{{ .back_image | absURL }}" class="img-fluid" alt="section-bg">
   </div>
   <div class="right-shape">
     <img src="{{`images/right-shape.png` | absURL}}" class="img-fluid" alt="right-shape">
@@ -106,7 +106,7 @@
 {{ with site.Data.homepage.product }}
 <section class="products" id="products">
   <div class="bg">
-    <img src="{{`images/section-bg-2.jpg` | absURL}}" class="img-fluid" alt="section-bg">
+    <img src="{{ .back_image | absURL }}" class="img-fluid" alt="section-bg">
   </div>
   <div class="left-shape">
     <img src="{{`images/left-shape.png` | absURL}}" class="img-fluid" alt="left-shape">
