--- a/layouts/index.html
+++ b/layouts/index.html
@@ -171,7 +171,24 @@
   </div>
   <div class="map-div">
     {{ with site.Params.map }}
-    <div id="map" data-center-lat="{{.map_center_lat}}" data-center-lng="{{.map_center_lng}}" data-position-lat="{{.map_position_lat}}" data-position-lng="{{.map_position_lng}}" data-marker="{{.map_marker | absURL }}" data-name="{{site.Title}}"></div>
+    <div
+      id="map"
+      data-center-lat="{{.map_center_lat}}"
+      data-center-lng="{{.map_center_lng}}"
+      data-position-lat="{{.map_position_lat}}"
+      data-position-lng="{{.map_position_lng}}"
+      data-marker="{{.map_marker | absURL }}"
+      data-name="{{site.Title}}">
+      <iframe
+      width="100%"
+      height="50%"
+      frameborder="0"
+      scrolling="no"
+      marginheight="0"
+      marginwidth="0"
+      src="https://www.openstreetmap.org/export/embed.html?bbox=14.099149703979494%2C40.830578941632396%2C14.10325884819031%2C40.8330913943546&amp;layer=mapnik&amp;marker=40.83183517989416%2C14.1012042760849" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=40.83184&amp;mlon=14.10120#map=18/40.83184/14.10120">
+        Visualizza mappa ingrandita</a></small>    
+    </div>
     {{ end }}
     <div class="office">
       <div class="contents">
