mostra sempre il footer

--- a/assets/scss/templates/_footer.scss
+++ b/assets/scss/templates/_footer.scss
@@ -6,7 +6,7 @@
     left: 50%;
     transform: translateX(-50%);
     background: #FF1D5D;
-    display: none;
+    // display: none;
     @include desktop{
         padding: 80px 0;
     }
