--- a/assets/scss/templates/_footer.scss
+++ b/assets/scss/templates/_footer.scss
@@ -1,10 +1,10 @@
 .footer{
     padding: 150px 0;
-    position: fixed;
+    // position: fixed;
     bottom: 0;
     width: 100%;
-    left: 50%;
-    transform: translateX(-50%);
+    // left: 50%;
+    // transform: translateX(-50%);
     background: #FF1D5D;
     // display: none;
     @include desktop{
