--- a/assets/scss/templates/_contact.scss
+++ b/assets/scss/templates/_contact.scss
@@ -103,6 +103,10 @@
         @include desktop{
             height: 400px;
         }
+        @include mobile{
+            position: relative;
+            top: 14em;
+        }
     }
     .office{
         position: absolute;
@@ -134,6 +138,11 @@
                     font-size: 30px;
                     line-height: 35px;
                     margin-bottom: 30px;
+                    @include mobile{
+                        font-size: 20px;
+                        line-height: 25px;
+                        margin-bottom: 20px;
+                    }
                 }
                 ul.social-list{
                     li{
