--- a/assets/scss/templates/_contact.scss
+++ b/assets/scss/templates/_contact.scss
@@ -138,7 +138,7 @@
                     font-size: 30px;
                     line-height: 35px;
                     margin-bottom: 30px;
-                    @include mobile{
+                    @include tablet{
                         font-size: 20px;
                         line-height: 25px;
                         margin-bottom: 20px;
