--- a/assets/scss/templates/_contact.scss
+++ b/assets/scss/templates/_contact.scss
@@ -123,12 +123,14 @@
         .contents{
             max-width: 690px;
             position: relative;
+            background: black;
             @include desktop{
                 width: 500px;
                 margin-top: 30px;
             }
             img{
                 width: 100%;
+                opacity: 0.4;
             }
             .address{
                 position: absolute;
