cambia testo link

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -138,7 +138,7 @@
               <div class="content">
                 <h5>{{ .title | markdownify }}</h5>
                 <p>{{ .content | markdownify }}</p>
-                <a href="{{ .project_url | absURL }}">Learn More</a>
+                <a href="{{ .project_url | absURL }}">Visualizza progetto</a>
               </div>
             </div>
           </div>
