--- a/themes/omega/assets/scss/templates/_vision.scss
+++ b/themes/omega/assets/scss/templates/_vision.scss
@@ -43,7 +43,7 @@
     position: relative;
     z-index: 6;
     &::before{
-        content: 'MADE THINGS';
+        content: 'FACCIAMO COSE';
         font-family: $secondary-font;
         position: absolute;
         top: 18%;
